--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "@angular/common": "~11.2.7",
     "@angular/compiler": "~11.2.7",
     "@angular/core": "~11.2.7",
+    "@angular/fire": "^6.1.4",
     "@angular/forms": "~11.2.7",
     "@angular/material": "^11.2.6",
     "@angular/platform-browser": "~11.2.7",
     "@angular/platform-browser-dynamic": "~11.2.7",
     "@angular/router": "~11.2.7",
+    "firebase": "^8.3.1",
     "flexboxgrid": "^6.3.1",
-    "rxjs": "~6.6.0",
+    "rxjs": "^6.6.7",
     "swiper": "^6.5.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
@@ -31,8 +33,8 @@
     "@angular-devkit/build-angular": "~0.1102.6",
     "@angular/cli": "~11.2.6",
     "@angular/compiler-cli": "~11.2.7",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
+    "@types/jasmine": "^3.6.9",
+    "@types/node": "^12.20.7",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
